Apic drivers enhancements (second approach): Sync
    - Model synchronization

Implements blueprint: apic-driver-enhancements

Change-Id: I4264afe5c140c3576951c1a5a28a8d7666481147

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -50,47 +50,49 @@
 [ml2_cisco_apic]
 
 # Hostname:port list of APIC controllers
-# apic_hosts=1.1.1.1:80, 1.1.1.2:8080, 1.1.1.3:80
+# apic_hosts = 1.1.1.1:80, 1.1.1.2:8080, 1.1.1.3:80
 
 # Username for the APIC controller
-# apic_username=user
+# apic_username = user
 
 # Password for the APIC controller
-# apic_password=password
+# apic_password = password
 
 # Whether use SSl for connecting to the APIC controller or not
-# apic_use_ssl=True
+# apic_use_ssl = True
 
 # How to map names to APIC: use_uuid or use_name
-# apic_name_mapping=use_name
+# apic_name_mapping = use_name
 
 # Names for APIC objects used by Neutron
 # Note: When deploying multiple clouds against one APIC,
 #       these names must be unique between the clouds.
-# apic_vmm_domain=openstack
-# apic_vlan_ns_name=openstack_ns
-# apic_node_profile=openstack_profile
-# apic_entity_profile=openstack_entity
-# apic_function_profile=openstack_function
-# apic_app_profile_name=openstack_app
+# apic_vmm_domain = openstack
+# apic_vlan_ns_name = openstack_ns
+# apic_node_profile = openstack_profile
+# apic_entity_profile = openstack_entity
+# apic_function_profile = openstack_function
+# apic_app_profile_name = openstack_app
+# Agent timers for State reporting and topology discovery
+# apic_sync_interval = 30
 
 # Specify your network topology.
 # This section indicates how your compute nodes are connected to the fabric's
 # switches and ports. The format is as follows:
 #
 # [apic_switch:<swich_id_from_the_apic>]
-# <compute_host>,<compute_host>=<switchport_the_host(s)_are_connected_to>
+# <compute_host>,<compute_host> = <switchport_the_host(s)_are_connected_to>
 #
 # You can have multiple sections, one for each switch in your fabric that is
 # participating in Openstack. e.g.
 #
 # [apic_switch:17]
-# ubuntu,ubuntu1=1/10
-# ubuntu2,ubuntu3=1/11
+# ubuntu,ubuntu1 = 1/10
+# ubuntu2,ubuntu3 = 1/11
 #
 # [apic_switch:18]
-# ubuntu5,ubuntu6=1/1
-# ubuntu7,ubuntu8=1/2
+# ubuntu5,ubuntu6 = 1/1
+# ubuntu7,ubuntu8 = 1/2
 
 # Describe external connectivity.
 # In this section you can specify the external network configuration in order
@@ -99,11 +101,11 @@
 # format is as follows:
 #
 # [apic_external_network:<externalNetworkName>]
-# switch=<switch_id_from_the_apic>
-# port=<switchport_the_external_router_is_connected_to>
-# encap=<encapsulation>
-# cidr_exposed=<cidr_exposed_to_the_external_router>
-# gateway_ip=<ip_of_the_external_gateway>
+# switch = <switch_id_from_the_apic>
+# port = <switchport_the_external_router_is_connected_to>
+# encap = <encapsulation>
+# cidr_exposed = <cidr_exposed_to_the_external_router>
+# gateway_ip = <ip_of_the_external_gateway>
 #
 # An example follows:
 # [apic_external_network:network_ext]
