Apic drivers enhancements (second approach): Topology
    - Handle topology dynamically

Implements blueprint: apic-driver-enhancements

Change-Id: I80ae799bf7c18939e58cb5c1ea8eb441633285df

--- a/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
+++ b/etc/neutron/plugins/ml2/ml2_conf_cisco.ini
@@ -75,6 +75,8 @@
 # apic_app_profile_name = openstack_app
 # Agent timers for State reporting and topology discovery
 # apic_sync_interval = 30
+# apic_agent_report_interval = 30
+# apic_agent_poll_interval = 2
 
 # Specify your network topology.
 # This section indicates how your compute nodes are connected to the fabric's
