Add functional test for IptablesManager
Introduce test of IptablesManager using filtering of ICMP packets in
namespaces.

Partial-bug: #1243216

Change-Id: I90ab0d397780247de619bd90f5febd0e59b84fc7

--- a/neutron/tests/functional/contrib/filters.template
+++ b/neutron/tests/functional/contrib/filters.template
@@ -10,3 +10,6 @@
 # processes that they launch with their containing tox environment's
 # python.
 kill_tox_python: KillFilter, root, $BASE_PATH/bin/python, -9
+
+# enable ping from namespace
+ping_filter: CommandFilter, ping, root
