Add option to remove networks from dead DHCP agents
Networks are removed from dead agents after a certain
configurable time.
Then unhosted networks could be picked up by alive DHCP agents.

The feature is added for all plugins that support DHCP scheduling

DocImpact
Change-Id: I6ab03b1642f54aa1d5de8844d95c758f1cb273f1
Closes-Bug: #1386794

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -173,6 +173,11 @@ lock_path = $state_path/lock
 # admin_state_up set to True to alive agents.
 # allow_automatic_l3agent_failover = False
 
+# Allow automatic removal of networks from dead DHCP agents with
+# admin_state_up set to True.
+# Networks could then be rescheduled if network_auto_schedule is True
+# allow_automatic_dhcp_failover = True
+
 # Number of DHCP agents scheduled to host a network. This enables redundant
 # DHCP agents for configured networks.
 # dhcp_agents_per_network = 1
