[L3][QoS] Neutron server side router gateway IP QoS
This patch enables to bind a QoS policy to the router gateway,
then in L3 agent side SNAT traffic for the VMs without floating
IPs can be limited under the policy bandwidth rules. This is
suit for all kinds of L3 routers: DVR, DVR with SNAT HA, L3 HA
and Legacy.

API update router gateway json:
{
router": {
  "external_gateway_info": {
    ...
    "qos_policy_id": "policy-uuid"
    }
  }
}

Depends-On: https://review.openstack.org/#/c/567497/

Partially-Implements blueprint: router-gateway-ip-qos
Closes-Bug: #1757044
Related-Bug: #1596611
Change-Id: I26e22bce7edd1f93b2ac0048b61b14f858938537

--- a/setup.cfg
+++ b/setup.cfg
@@ -206,6 +206,7 @@ neutron.objects =
     QosPolicyNetworkBinding = neutron.objects.qos.binding:QosPolicyNetworkBinding
     QosPolicyPortBinding = neutron.objects.qos.binding:QosPolicyPortBinding
     QosPolicyRBAC = neutron.objects.qos.policy:QosPolicyRBAC
+    QosPolicyRouterGatewayIPBinding = neutron.objects.qos.binding:QosPolicyRouterGatewayIPBinding
     QosRule = neutron.objects.qos.rule:QosRule
     QosRuleType = neutron.objects.qos.rule_type:QosRuleType
     QosRuleTypeDriver = neutron.objects.qos.rule_type:QosRuleTypeDriver
