[L3][QoS] Agent side router gateway IP rate limit
This patch implements the L3 agent side router gateway IP rate
limit. For routers in centralized snat node (network node),
the tc rules will be set on the corresponding device in router
namespace:
    1. Legacy and HA router, qrouter-namespace and qg-device
    2. Dvr (edge) router, snat namespace and qg-device

If gateway IP rate limit was set, then under the same router,
all the VMs without floating IP will share the bandwidth.

Partially-Implements blueprint: router-gateway-ip-qos
Closes-Bug: #1757044
Change-Id: Ie92ff0d4df0e85ce71c7d50f34ea6ff973812af8

--- a/setup.cfg
+++ b/setup.cfg
@@ -110,6 +110,7 @@ neutron.agent.l2.extensions =
     log = neutron.services.logapi.agent.log_extension:LoggingExtension
 neutron.agent.l3.extensions =
     fip_qos = neutron.agent.l3.extensions.qos.fip:FipQosAgentExtension
+    gateway_ip_qos = neutron.agent.l3.extensions.qos.gateway_ip:RouterGatewayIPQosAgentExtension
     port_forwarding = neutron.agent.l3.extensions.port_forwarding:PortForwardingAgentExtension
     snat_log = neutron.agent.l3.extensions.snat_log:SNATLoggingExtension
 neutron.services.logapi.drivers =
