--- a/setup.cfg
+++ b/setup.cfg
@@ -108,6 +108,7 @@ neutron.agent.l2.extensions =
     log = neutron.services.logapi.agent.log_extension:LoggingExtension
 neutron.agent.l3.extensions =
     fip_qos = neutron.agent.l3.extensions.qos.fip:FipQosAgentExtension
+    port_forwarding = neutron.agent.l3.extensions.port_forwarding:PortForwardingAgentExtension
 neutron.services.logapi.drivers =
     ovs = neutron.services.logapi.drivers.openvswitch.ovs_firewall_log:OVSFirewallLoggingDriver
 neutron.qos.agent_drivers =
