--- a/setup.cfg
+++ b/setup.cfg
@@ -100,6 +100,7 @@ neutron.ml2.extension_drivers =
     dns = neutron.plugins.ml2.extensions.dns_integration:DNSExtensionDriverML2
     data_plane_status = neutron.plugins.ml2.extensions.data_plane_status:DataPlaneStatusExtensionDriver
     dns_domain_ports = neutron.plugins.ml2.extensions.dns_integration:DNSDomainPortsExtensionDriver
+    uplink_status_propagation = neutron.plugins.ml2.extensions.uplink_status_propagation:UplinkStatusPropagationExtensionDriver
 neutron.ipam_drivers =
     fake = neutron.tests.unit.ipam.fake_driver:FakeDriver
     internal = neutron.ipam.drivers.neutrondb_ipam.driver:NeutronDbPool
