--- a/tox.ini
+++ b/tox.ini
@@ -162,7 +162,8 @@ commands = sphinx-build -W -b linkcheck doc/source doc/build/linkcheck
 # N534 Untranslated exception message
 # TODO(amotoki) check the following new rules should be fixed or ignored
 # E731 do not assign a lambda expression, use a def
-ignore = E125,E126,E128,E731,H404,H405,N530,N534
+# W504 line break after binary operator
+ignore = E125,E126,E128,E731,H404,H405,N530,N534,W504
 # H106: Don't put vim configuration in source files
 # H203: Use assertIs(Not)None to check for None
 # H204: Use assert(Not)Equal to check for equality
