Introduce L3 agent extension for SNAT logging
This patch introduces SNAT logging extension for Neutron Packet Logging
framework.

Co-Authored-By: Kim Bao Long <longkb@vn.fujitsu.com>
Partial-Bug: #1752290
Change-Id: I882b8e75525f51ef8b5b032fc89843ae904844e7

--- a/setup.cfg
+++ b/setup.cfg
@@ -109,6 +109,7 @@ neutron.agent.l2.extensions =
 neutron.agent.l3.extensions =
     fip_qos = neutron.agent.l3.extensions.qos.fip:FipQosAgentExtension
     port_forwarding = neutron.agent.l3.extensions.port_forwarding:PortForwardingAgentExtension
+    snat_log = neutron.agent.l3.extensions.snat_log:SNATLoggingExtension
 neutron.services.logapi.drivers =
     ovs = neutron.services.logapi.drivers.openvswitch.ovs_firewall_log:OVSFirewallLoggingDriver
 neutron.qos.agent_drivers =
