Switch default functional tests to python3, add job for python2
As a part of the python 3 community goal, this converts the functional
tests to run with python3 by default, and in Zuul.

As discussed at the Stein PTG in Denver, unit and functional tests will
still run on both versions, so this adds a python2 job for functional
tests.

This patch also suppress logging levels from some external libraries
to avoid issues with subunit.parser and python 3. For details see bug
reported for Cinder [1].

[1] https://bugs.launchpad.net/cinder/+bug/1728640

Co-Authored-By: Slawek Kaplonski <skaplons@redhat.com>

Change-Id: I8958d0b5b9147ffd1ef2d1cef5dcbf79c8be5cd4

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -15,6 +15,7 @@
     check:
       jobs:
         - neutron-functional
+        - neutron-functional-python27
         - neutron-fullstack
         - neutron-rally-task
         - neutron-tempest-dvr
@@ -57,6 +58,7 @@
     gate:
       jobs:
         - neutron-functional
+        - neutron-functional-python27
         - neutron-fullstack
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
@@ -79,7 +81,6 @@
         - neutron-tempest-with-os-ken-master
     experimental:
       jobs:
-        - neutron-functional-python35
         - neutron-functional-with-uwsgi
         - neutron-fullstack-with-uwsgi
         - neutron-tempest-with-uwsgi
@@ -112,20 +113,10 @@
       - ^releasenotes/.*$
 
 - job:
-    name: neutron-functional-python35
-    parent: legacy-dsvm-base
-    run: playbooks/legacy/neutron-functional-python35/run.yaml
-    post-run: playbooks/legacy/neutron-functional-python35/post.yaml
-    timeout: 7800
-    required-projects:
-      - openstack-infra/devstack-gate
-      - openstack/neutron
-    irrelevant-files:
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^releasenotes/.*$
-    voting: false
+    name: neutron-functional-python27
+    parent: neutron-functional
+    run: playbooks/legacy/neutron-functional-python27/run.yaml
+    post-run: playbooks/legacy/neutron-functional-python27/post.yaml
 
 - job:
     name: neutron-fullstack
