--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ setenv = OS_SUDO_TESTING=1
 commands = false
 
 [testenv:functional]
-basepython = python2.7
+basepython = python3
 setenv = {[testenv]setenv}
          {[testenv:common]setenv}
          OS_TEST_PATH=./neutron/tests/functional
@@ -56,14 +56,14 @@ deps =
   {[testenv]deps}
   -r{toxinidir}/neutron/tests/functional/requirements.txt
 
-[testenv:functional-python35]
-basepython = python3.5
+[testenv:functional-python27]
+basepython = python2.7
 setenv = {[testenv:functional]setenv}
 deps =
   {[testenv:functional]deps}
 
 [testenv:dsvm-functional]
-basepython = python2.7
+basepython = python3
 setenv = {[testenv:functional]setenv}
          {[testenv:dsvm]setenv}
 deps =
@@ -72,14 +72,13 @@ commands =
   {toxinidir}/tools/deploy_rootwrap.sh {toxinidir} {envdir}/etc {envdir}/bin
   stestr run {posargs}
 
-[testenv:dsvm-functional-python35]
-basepython = python3.5
+[testenv:dsvm-functional-python27]
+basepython = python2.7
 setenv = {[testenv:dsvm-functional]setenv}
 deps =
   {[testenv:dsvm-functional]deps}
 commands =
-  {toxinidir}/tools/deploy_rootwrap.sh {toxinidir} {envdir}/etc {envdir}/bin
-  stestr run {posargs}
+  {[testenv:dsvm-functional]commands}
 
 [testenv:dsvm-fullstack]
 basepython = python3
