--- a/playbooks/legacy/neutron-functional-python27/run.yaml
+++ b/playbooks/legacy/neutron-functional-python27/run.yaml
@@ -1,5 +1,5 @@
 - hosts: all
-  name: Neutron functional test suite running with Python 3.5
+  name: Autoconverted job legacy-neutron-dsvm-functional from old job gate-neutron-dsvm-functional-ubuntu-xenial-nv
   tasks:
 
     - name: Ensure legacy workspace directory
@@ -38,12 +38,12 @@
           fi
 
           function gate_hook {
-              bash -xe $BASE/new/neutron/neutron/tests/contrib/gate_hook.sh dsvm-functional-python35
+              bash -xe $BASE/new/neutron/neutron/tests/contrib/gate_hook.sh dsvm-functional-python27
           }
           export -f gate_hook
 
           function post_test_hook {
-              bash -xe $BASE/new/neutron/neutron/tests/contrib/post_test_hook.sh dsvm-functional-python35
+              bash -xe $BASE/new/neutron/neutron/tests/contrib/post_test_hook.sh dsvm-functional-python27
           }
           export -f post_test_hook
 
