--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,7 @@ neutron.service_plugins =
     trunk = neutron.services.trunk.plugin:TrunkPlugin
     loki = neutron.services.loki.loki_plugin:LokiPlugin
     log = neutron.services.logapi.logging_plugin:LoggingPlugin
+    port_forwarding = neutron.services.portforwarding.pf_plugin:PortForwardingPlugin
 neutron.ml2.type_drivers =
     flat = neutron.plugins.ml2.drivers.type_flat:FlatTypeDriver
     local = neutron.plugins.ml2.drivers.type_local:LocalTypeDriver
