Convert policy.json into policy-in-code
This commit introduces a framework for policy-in-code support
in the neutron stadium and converts the existing policy.json
in the neutron repository into the policy-in-code style.

NOTES:
1) This commit tries not to change the existing policy behavior
provided by the neutron repository even if there are some stale policies
or policies to be defined in a neutron-related project.
They should be clean up later in Stein release.

2) 'default' policy should be dropped from the default policies
as all default policies should be defined in the code (as many projects
which already completed policy-in-code do). However, dropping 'default'
policy potentially affects policy behavior in neutron-related projects,
so it needs to be visit carefully. Considering this, this commit decides
to keep the 'default' policy.

Partially Implements: blueprint neutron-policy-in-code
Change-Id: I6a61079da4d4f5080ee32d640144e6bdb14735fa

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,6 @@ packages =
 data_files =
     etc/neutron =
         etc/api-paste.ini
-        etc/policy.json
         etc/rootwrap.conf
     etc/neutron/rootwrap.d = etc/neutron/rootwrap.d/*
 scripts =
@@ -143,6 +142,12 @@ oslo.config.opts =
     nova.auth = neutron.opts:list_auth_opts
 oslo.config.opts.defaults =
     neutron = neutron.common.config:set_cors_middleware_defaults
+oslo.policy.enforcer =
+    neutron = neutron.policy:get_enforcer
+oslo.policy.policies =
+    neutron = neutron.conf.policies:list_rules
+neutron.policies =
+    neutron = neutron.conf.policies:list_rules
 neutron.db.alembic_migrations =
     neutron = neutron.db.migration:alembic_migrations
 neutron.interface_drivers =
