--- a/tox.ini
+++ b/tox.ini
@@ -116,6 +116,7 @@ commands=
   {[testenv:genconfig]commands}
   {[testenv:bashate]commands}
   {[testenv:bandit]commands}
+  {[testenv:genpolicy]commands}
 whitelist_externals =
   sh
   bash
@@ -201,6 +202,11 @@ commands = bash -c "find {toxinidir}             \
 basepython = python3
 envdir = {toxworkdir}/shared
 commands = {toxinidir}/tools/generate_config_file_samples.sh
+
+[testenv:genpolicy]
+basepython = python3
+envdir = {toxworkdir}/shared
+commands = oslopolicy-sample-generator --config-file=etc/oslo-policy-generator/policy.conf
 
 # This environment can be used to quickly validate that all needed system
 # packages required to successfully execute test targets are installed
