Don't run ironic-tempest job for irrelevant changes
There is no need to run this job if only docs or release notes
are changed.

Change-Id: I503f14afdc7ecbe18784138be11387d862b244ed

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -16,6 +16,19 @@
         - neutron-grenade
         - openstack-tox-lower-constraints
         - neutron-fullstack-python35
+        # We don't run the job on things like neutron docs-only changes
+        - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
+            voting: false
+            irrelevant-files:
+              - ^(test-|)requirements.txt$
+              - ^.*\.rst$
+              - ^doc/.*$
+              - ^neutron/locale/.*$
+              - ^neutron/tests/unit/.*$
+              - ^releasenotes/.*$
+              - ^setup.cfg$
+              - ^tools/.*$
+              - ^tox.ini$
     gate:
       jobs:
         - neutron-functional
