Fix iptables metering driver entrypoint
Closes-Bug: #1786347
Change-Id: If1c276338cec0c199d8cc8d8f6385025a3bb5d25
(cherry picked from commit adf38349c45c8871a8858d3440a2c6fb4d967583)

--- a/setup.cfg
+++ b/setup.cfg
@@ -152,7 +152,7 @@ neutron.agent.firewall_drivers =
     openvswitch = neutron.agent.linux.openvswitch_firewall:OVSFirewallDriver
 neutron.services.metering_drivers =
     noop = neutron.services.metering.drivers.noop.noop_driver:NoopMeteringDriver
-    iptables = neutron.services.metering.iptables.iptables_driver:IptablesMeteringDriver
+    iptables = neutron.services.metering.drivers.iptables.iptables_driver:IptablesMeteringDriver
 neutron.objects =
     AddressScope = neutron.objects.address_scope:AddressScope
     AllowedAddressPair = neutron.objects.port.extensions.allowedaddresspairs:AllowedAddressPair
