--- a/setup.cfg
+++ b/setup.cfg
@@ -161,7 +161,7 @@ neutron.agent.firewall_drivers =
     openvswitch = neutron.agent.linux.openvswitch_firewall:OVSFirewallDriver
 neutron.services.metering_drivers =
     noop = neutron.services.metering.drivers.noop.noop_driver:NoopMeteringDriver
-    iptables = neutron.services.metering.iptables.iptables_driver:IptablesMeteringDriver
+    iptables = neutron.services.metering.drivers.iptables.iptables_driver:IptablesMeteringDriver
 
 [build_sphinx]
 all_files = 1
