Make neutron-fullstack-python36 job voting
The neutron-fullstack-python3[56] job has a record of stability at least
as good as the neutron-fullstack job at this point for the past 2 weeks
[1].  Make it a voting check and add it to the gate queue.

[1] http://graphite.openstack.org/render/?width=1242&height=553&_salt=1533933299.32&from=-14days&drawNullAsZero=true&lineMode=connected&connectedLimit=&areaMode=all&yStep=1&title=neutron-fullstack-python35%20job%20data&target=stats_counts.zuul.tenant.openstack.pipeline.check.project.git_openstack_org.openstack_neutron.master.job.neutron-fullstack-python35.SUCCESS&target=stats_counts.zuul.tenant.openstack.pipeline.check.project.git_openstack_org.openstack_neutron.master.job.neutron-fullstack-python35.FAILURE

Change-Id: I6e647cb502485bef8fed55046a2cd7778eb64ab2

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -37,7 +37,7 @@
         - neutron-tempest-dvr-ha-multinode-full
         - neutron-tempest-iptables_hybrid
         - neutron-grenade
-        - neutron-fullstack-python35
+        - neutron-fullstack-python36
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
             irrelevant-files: *tempest-irrelevant-files
@@ -56,6 +56,7 @@
         # NOTE(haleyb) revert this as soon as we fix bug 1791989
         # - neutron-grenade-dvr-multinode
         - neutron-grenade
+        - neutron-fullstack-python36
     periodic:
       jobs:
         - neutron-functional
@@ -134,20 +135,10 @@
 
 
 - job:
-    name: neutron-fullstack-python35
-    parent: legacy-dsvm-base
-    run: playbooks/legacy/neutron-fullstack-python35/run.yaml
-    post-run: playbooks/legacy/neutron-fullstack-python35/post.yaml
-    timeout: 7800
-    required-projects:
-      - openstack-infra/devstack-gate
-      - openstack/neutron
-    irrelevant-files:
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^releasenotes/.*$
-    voting: false
+    name: neutron-fullstack-python36
+    parent: neutron-fullstack
+    run: playbooks/legacy/neutron-fullstack-python36/run.yaml
+    post-run: playbooks/legacy/neutron-fullstack-python36/post.yaml
 
 - job:
     name: neutron-rally-task
