Use Tempest slow job to run all slow tests
tempest-slow job run all the slow tests including API
or scenario slow tests. By running this job will help to
avoid any regressions across projects.

This new job "tempest-slow" will run as voting on check pipeline
and same job run on nova and cinder gate.

Tempest also run "tempest-slow" as voting job.

Detailed discussion on ML[2].

[1] http://git.openstack.org/cgit/openstack/tempest/tree/.zuul.yaml#n147
[2] http://lists.openstack.org/pipermail/openstack-dev/2018-May/130394.html

Change-Id: Icdf5578234a96fa36e4b275d70f943da059a4b1e

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -41,6 +41,8 @@
         - openstack-tox-cover
         - tempest-full:
             irrelevant-files: *tempest-irrelevant-files
+        - tempest-slow:
+            irrelevant-files: *tempest-irrelevant-files
     gate:
       jobs:
         - neutron-functional
