Consolidate irrelevant-files in zuul config
Change-Id: Idfe0eff873a2aeb22cb12f98aef864db671f0fed

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -19,7 +19,7 @@
         # We don't run the job on things like neutron docs-only changes
         - ironic-tempest-dsvm-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
-            irrelevant-files:
+            irrelevant-files: &tempest-irrelevant-files
               - ^(test-|)requirements.txt$
               - ^.*\.rst$
               - ^doc/.*$
@@ -147,16 +147,7 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
       - openstack/tempest
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
 
 - job:
     name: neutron-tempest-linuxbridge
@@ -191,16 +182,7 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     nodeset: ubuntu-xenial-2-node
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
 
 - job:
     name: neutron-grenade-dvr-multinode
@@ -213,16 +195,7 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     nodeset: ubuntu-xenial-2-node
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
 
 - job:
     name: neutron-tempest-multinode-full
@@ -235,16 +208,7 @@
       - openstack/neutron
       - openstack/tempest
     nodeset: ubuntu-xenial-2-node
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
     voting: false
 
 - job:
@@ -258,16 +222,7 @@
       - openstack/neutron
       - openstack/tempest
     nodeset: ubuntu-xenial-3-node
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
     voting: false
 
 - job:
@@ -280,16 +235,7 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
       - openstack/tempest
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
 
 - job:
     name: neutron-grenade
@@ -301,16 +247,7 @@
       - openstack-dev/grenade
       - openstack-infra/devstack-gate
       - openstack/neutron
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
 
 - job:
     name: neutron-tempest-postgres-full
@@ -378,15 +315,5 @@
       tox_envlist: full
       devstack_localrc:
         NEUTRON_DEPLOY_MOD_WSGI: True
-    irrelevant-files:
-      - ^(test-|)requirements.txt$
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^neutron/tests/.*$
-      - ^neutron/tests/unit/.*$
-      - ^releasenotes/.*$
-      - ^setup.cfg$
-      - ^tools/.*$
-      - ^tox.ini$
+    irrelevant-files: *tempest-irrelevant-files
     voting: false
