--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ debtcollector>=1.2.0 # Apache-2.0
 eventlet!=0.18.3,!=0.20.1,>=0.18.2 # MIT
 pecan!=1.0.2,!=1.0.3,!=1.0.4,!=1.2,>=1.1.1 # BSD
 httplib2>=0.9.1 # MIT
+requests>=2.14.2 # Apache-2.0
 Jinja2>=2.10 # BSD License (3 clause)
 keystonemiddleware>=4.17.0 # Apache-2.0
 netaddr>=0.7.18 # BSD
