--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,9 +1,9 @@
 - project:
     templates:
-      - openstack-python36-jobs-nonvoting
       - neutron-tempest-plugin-jobs
       - openstack-python-jobs
       - openstack-python35-jobs
+      - openstack-python36-jobs
       - publish-openstack-docs-pti
       - periodic-stable-jobs
       - check-requirements
